Remove IDE-specific folders from version control
- Add .kiro/ and .kotlin/ to .gitignore
- Remove .kiro/ folder from git tracking (contains IDE-specific config, specs, hooks)
- Remove .kotlin/ folder from git tracking (contains Kotlin compiler logs)

These folders contain local IDE configuration and should not be shared in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -91,10 +91,9 @@ lint-results*.html
 ehthumbs.db
 Thumbs.db
 
-# Kiro IDE sensitive files
-.kiro/settings/mcp.json
-.kiro/settings/user.json
-.kiro/settings/workspace.json
+# Kiro IDE files (IDE-specific configuration and local data)
+.kiro/
+.kotlin/
 
 # API Keys and sensitive configuration
 **/api-keys.json
